20230105 - KELAR DONE FINISH (tinggal rapiin bahasa, ui detail, popup cancel) #BrillyMustBeProud

--- a/app/src/main/res/layout/activity_order_detail_laundry.xml
+++ b/app/src/main/res/layout/activity_order_detail_laundry.xml
@@ -63,7 +63,7 @@
                         android:fontFamily="@font/ralewayregular"/>
 
                     <TextView
-                        android:id="@+id/namaLaundry"
+                        android:id="@+id/namaUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nama Laundry:"
@@ -76,15 +76,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="No. Telp:"
-                        android:textSize="16dp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/ralewayregular"/>
-
-                    <TextView
-                        android:id="@+id/alamat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Alamat:"
                         android:textSize="16dp"
                         android:textColor="@color/black"
                         android:fontFamily="@font/ralewayregular"/>
@@ -182,66 +173,6 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/bodyPickupTop"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="16dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="Want to reschedule? "
-                        android:textSize="16dp"/>
-
-                    <Spinner
-                        android:gravity="center_vertical"
-                        android:id="@+id/rescheduleSpinner"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/spinnerrgsshape"
-                        android:layout_marginLeft="20dp"
-                        android:spinnerMode="dropdown" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layoutReschedule"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Reschedule"
-                        android:textSize="28dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/ralewayregular"/>
-
-                    <TextView
-                        android:id="@+id/editTanggal"
-                        android:clickable="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tanggal?"
-                        android:textSize="16dp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/ralewayregular"/>
-
-                    <TextView
-                        android:id="@+id/editJam"
-                        android:clickable="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Jam?"
-                        android:textSize="16dp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/ralewayregular"/>
-
-                </LinearLayout>
-
-                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -262,11 +193,25 @@
                         android:layout_height="match_parent"/>
 
                     <android.widget.Button
-                        android:id="@+id/btnSave"
+                        android:id="@+id/btnAccept"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_gravity="center_horizontal"
-                        android:text="Save"
+                        android:text="Accept"
+                        android:fontFamily="@font/ralewayregular"
+                        android:background="@drawable/buttonsave"/>
+
+                    <Space
+                        android:id="@+id/space1"
+                        android:layout_width="12dp"
+                        android:layout_height="match_parent"/>
+
+                    <android.widget.Button
+                        android:id="@+id/btnPickup"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Go Pickup"
                         android:fontFamily="@font/ralewayregular"
                         android:background="@drawable/buttonsave"/>
 
