--- a/app/src/main/res/layout/activity_order_process.xml
+++ b/app/src/main/res/layout/activity_order_process.xml
@@ -203,6 +203,7 @@
 
                         <EditText
                             android:visibility="gone"
+                            android:inputType="numberSigned"
                             android:id="@+id/inputBerat1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -229,6 +230,7 @@
 
                         <EditText
                             android:visibility="gone"
+                            android:inputType="numberSigned"
                             android:id="@+id/inputPair1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -294,6 +296,7 @@
 
                         <EditText
                             android:visibility="gone"
+                            android:inputType="numberSigned"
                             android:id="@+id/inputBerat"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -320,6 +323,7 @@
 
                         <EditText
                             android:visibility="gone"
+                            android:inputType="numberSigned"
                             android:id="@+id/inputPair"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -454,19 +458,64 @@
                 <LinearLayout
                     android:layout_margin="12dp"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
+                    android:paddingLeft="18dp"
                     android:orientation="vertical"
                     android:background="@drawable/belakangcategoryorder"
                     android:gravity="center_vertical">
 
-                    <TextView
-                        android:id="@+id/details"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Harga"
-                        android:textSize="16dp"
-                        android:textColor="@color/black"
-                        android:buttonTint="@color/blue"/>
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/harga"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Harga"
+                            android:textSize="16dp"
+                            android:textColor="@color/black"
+                            android:buttonTint="@color/blue"/>
+
+                        <TextView
+                            android:id="@+id/txtHarga"
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="24dp"
+                            android:text="0"
+                            android:textSize="16dp"
+                            android:textColor="@color/black"
+                            android:buttonTint="@color/blue"/>
+
+                        <android.widget.Button
+                            android:id="@+id/buttonHarga"
+                            android:layout_width="80dp"
+                            android:layout_height="40dp"
+                            android:layout_marginLeft="100dp"
+                            android:text="Tampilkan Harga"
+                            android:textSize="12sp"
+                            android:textAllCaps="false"
+                            android:background="@drawable/edittextrgsshape"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layoutAlamat"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/editAlamat"
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:hint="Input alamat pickup"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
                 <!--            ini detail-->
