--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -155,6 +155,7 @@
             android:background="@drawable/edittextrgsshape"
             android:fontFamily="@font/ralewayregular"
             android:hint="Password"
+            android:inputType="textPassword"
             android:paddingLeft="5dp"
             android:textSize="12dp"
             android:textStyle="italic"
@@ -171,6 +172,7 @@
             android:background="@drawable/edittextrgsshape"
             android:fontFamily="@font/ralewayregular"
             android:hint="Confirm Password"
+            android:inputType="textPassword"
             android:paddingLeft="5dp"
             android:textSize="12dp"
             android:textStyle="italic"
