20230106 - benerin ui orderdetail (user) #BrillyMustBeProud

--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -204,6 +204,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/layoutReschedule"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -262,6 +263,7 @@
                         android:layout_height="match_parent"/>
 
                     <android.widget.Button
+                        android:visibility="gone"
                         android:id="@+id/btnSave"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
